--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>포텐님의 아바타법 코인 백테스트</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XBGBTXST6B"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-XBGBTXST6B");
+    </script>
   </head>
 
   <body>
