--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
 
@@ -11,7 +12,7 @@
     <script>
       WebFont.load({
         google: {
-          families: ["Noto Sans KR"]
+          families: ["Titillium Web"]
         }
       });
     </script>
